# tunneldesk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml  prek.toml
.github/workflows/: release.yml
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts  stores.svelte.ts  types.ts  utils.spec.ts  utils.ts
frontend/src/lib/api/: mappers.spec.ts  mappers.ts  websocket.svelte.ts
frontend/src/lib/components/: Select.svelte
frontend/src/lib/components/body/: BodyPreview.svelte  BodyPreview.svelte.spec.ts
frontend/src/lib/components/details/: FilterBar.svelte  FilterBar.svelte.spec.ts  HeadersTab.svelte  RequestDetails.svelte  RequestTable.svelte  TunnelDetails.svelte  TunnelHeader.svelte  WsMessagesTab.svelte
frontend/src/lib/components/modal/: Modal.svelte  Modal.svelte.spec.ts  ReplayModal.svelte  SyncReportModal.svelte
frontend/src/lib/components/sidebar/: CloudflareStatus.svelte  Sidebar.svelte  TunnelItem.svelte  TunnelItem.svelte.spec.ts
frontend/src/routes/: +page.svelte
scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1
src/: capture.rs  cloudflare.rs  cloudflared.rs  config.rs  gui.rs  main.rs  mcp.rs  proxy.rs  storage.rs  sync.rs  tunnel.rs  web_server.rs
