[package]
name = "tunneldesk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
