[package]
name = "tunneldesk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = "off"

[profile.dev.package."*"]
opt-level = 0
debug = 2
