[package]
name = "tunneldesk"
version = "0.0.3"
edition = "2024"

[features]
default = ["gui","mcp"]
gui = ["dep:wry", "dep:tao"]
mcp = ["dep:rmcp"]

[dependencies]
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
rust-embed = { version = "8", features = ["mime-guess"] }
futures-util = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
socket2 = "0.6"
rand = "0.9"
home = "0.5"
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io", "schemars"], optional = true }
wry = { version = "0.55", optional = true }
tao = { version = "0.35", optional = true }
winresource = "0.1.31"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = "off"

[profile.dev.package."*"]
opt-level = 0
debug = 2
